--- a/.env
+++ b/.env
@@ -18,6 +18,9 @@ APP_ENV=dev
 APP_DEBUG=true
 PIMCORE_DEV_MODE=false
 
+GOOGLE_BASE_URL=https://translation.googleapis.com/language/translate/v2
+GOOGLE_TOKEN=AIzaSyAkT8IpskAuIEBJ1VJUlJqR3zAQd5ZYHkk
+
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
